revised readme.md and ipyntb files

--- a/cryptocurrency_clusters.ipynb
+++ b/cryptocurrency_clusters.ipynb
@@ -1498,6 +1498,24 @@
     "plt.ylabel('PC2')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b95177e-e26f-45fb-9c3a-1fedeb3eee99",
+   "metadata": {},
+   "source": [
+    "## Recommendation\n",
+    "##### Based on your findings, make a brief (1-2 sentences) recommendation to your clients. Can the cryptocurrencies be clustered together? If so, into how many clusters?\n",
+    "### Based on PCA unsupervised model, k-clusters, and elbow graph the cyptocurrencies can be grouped into four clusters for classification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de2795e7-9ab2-4130-a528-c05662750849",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
